A flexbox dilemma later

--- a/fragments.html
+++ b/fragments.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset='UTF-8' />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+
+  <title>4 A.M</title>
+</head>
+
+<body>
+      <div class="">
+      <nav class="navbar navbar-light" style="background-color: #FFF;">
+        <ul class="nav">
+          <a class="navbar-brand" href="index.html"><strong>4 A.M</strong></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="sparks.html">Sparks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="fragments.html">Fragments</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="glisten.html">Glisten</a>
+          </li>
+        </nav>
+          </div>
+
+
+
+
+      <div class="content-container">
+
+        <div class="title-header">
+          <h1>FRAGMENTS</h1>
+          <h2>life of images</h2>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="column">
+          <img src="hi1.png" alt="hello1">
+          <img src="hi2.png" alt="hello2">
+          <img src="hi3.png" alt="hello3">
+          <img src="hi4.png" alt="hello4">
+          <img src="hi5.jpg" alt="hello5">
+          <img src="hi6.jpg" alt="hello6">
+          <img src="hi7.png" alt="hello7">
+        </div>
+        <div class="column">
+          <img src="hi8.png" alt="hello8">
+          <img src="hi9.png" alt="hello9">
+          <img src="hi10.png" alt="hello10">
+          <img src="hi11.png" alt="hello11">
+          <img src="hi12.png" alt="hello12">
+          <img src="hi13.jpg" alt="hello`3">
+        </div>
+      </div>
+
+      </div>
+
+
+
+      <footer class="footer">
+        <small>Copyright &copy; 2020, Kallie</small>
+        <br>
+        <a target="_blank" href="https://github.com/obliquify/4am.git">My Repository</a>
+      </footer>
+
+
+
+
+
+
+
+
+
+
+</body>
+
+</html>
