--- a/sparks.html
+++ b/sparks.html
@@ -1,1 +1,101 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset='UTF-8' />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+
+  <title>4 A.M</title>
+</head>
+
+<body>
+  <div class="">
+    <nav class="navbar navbar-light" style="background-color: #FFF;">
+      <ul class="nav">
+        <a class="navbar-brand" href="index.html"><strong>4 A.M</strong></a>
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="sparks.html">Sparks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="fragments.html">Fragments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="glisten.html">Glisten</a>
+        </li>
+      </nav>
+    </div>
+
+
+    <div class="content-container">
+      <div class="title-header">
+        <h1>SPARKS</h1>
+        <h2><em>Ignite with thought.</em></h2>
+      </div>
+    </div>
+
+
+    <div class="top-container">
+      <div class="inspo">
+        <h1>INSPIRATION</h1>
+        <br>
+        <p>“Life is not a problem to be solved, but a reality to be experienced.” ― Soren Kierkegaard</p>
+        <p>“The most common form of despair is not being who you are.” Søren Kierkegaard</p>
+        <p>“What if everything in the world were a misunderstanding, what if laughter were really tears?”― Soren Kierkegaard</p>
+        <p>“If I were to wish for anything, I should not wish for wealth and power, but for the passionate sense of the potential, for the eye which, ever young and ardent, sees the possible. Pleasure disappoints, possibility never. And what wine is so sparkling, what so fragrant, what so intoxicating, as possibility!”- Soren Kierkegaard</p>
+        <p>Happiness is the meaning and the purpose of life, the whole aim and end of human existence.” ― Aristotle</p>
+      </div>
+      <div class="suggestions">
+        <h1>SUGGESTIONS</h1>
+        <br>
+        <p>take care of yourself :)</p>
+      </div>
+      <div class="thoughtstream">
+        <h1>THOUGHT STREAM</h1>
+        <br>
+        <p>i want to find a sign that tells me not to do something, and do it</p>
+        <br>
+        <p>flowers, five petals, etched into the tops of each paste pink plush velvet chairs, tufted and luxurious chairs populate the wall
+          gold accents  brighten the brilliant white tile bathroom. the knobs, faucet, lighting fixtures-Gold.</p>
+          <br>
+          <p>why does the sun disguise the stars when it itself is a star? is it jealous?</p>
+          <br>
+          <p>how terrible it is to be here under this cold, running water
+            Each droplet whispers a way inwards
+            I would drown if I wasn’t empty </p>
+          </div>
+        </div>
+
+        <div class="bottom-container">
+          <div class="jpg-header">
+            <h1>.jpg</h1>
+            <h2>of the day</h2>
+          </div>
+          <div class="jpg-img">
+            <img src="sunset.jpg" alt="Plaza.">
+          </div>
+        </div>
+
+
+        <footer class="footer">
+          <small>Copyright &copy; 2020, Kallie</small>
+          <br>
+          <a target="_blank" href="https://github.com/obliquify/4am.git">My Repository</a>
+        </footer>
+
+
+
+
+
+
+
+        <div class="clr"></div
+
+
+        </body>
+
+        </html>
