--- a/glisten.html
+++ b/glisten.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset='UTF-8' />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+
+  <title>4 A.M</title>
+</head>
+
+<body>
+      <div class="">
+      <nav class="navbar navbar-light" style="background-color: #FFF;">
+        <ul class="nav">
+          <a class="navbar-brand" href="index.html"><strong>4 A.M</strong></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="sparks.html">Sparks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="fragments.html">Fragments</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="glisten.html">Glisten</a>
+          </li>
+        </nav>
+          </div>
+
+
+
+
+      <div class="content-container">
+
+        <div class="title-header">
+          <h1>GLISTEN</h1>
+          <h2>what you want others to see</h2>
+          <h3>that glimmer of hope, that sheen of assurance</h3>
+        </div>
+      </div>
+
+
+
+      <footer class="footer">
+        <small>Copyright &copy; 2020, Kallie</small>
+        <br>
+        <a target="_blank" href="https://github.com/obliquify/4am.git">My Repository</a>
+      </footer>
+
+
+
+
+
+
+
+
+
+
+</body>
+
+</html>
