--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" href="sparks.html">Sparks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="glisten.html">Fragments</a>
+            <a class="nav-link" href="fragments.html">Fragments</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="glisten.html">Glisten</a>
