Queries to finality

--- a/sparks.html
+++ b/sparks.html
@@ -38,35 +38,32 @@
       </div>
     </div>
 
+    <div class="spark-page">
 
-    <div class="top-container">
-      <div class="inspo">
-        <h1>INSPIRATION</h1>
-        <br>
-        <p>“Life is not a problem to be solved, but a reality to be experienced.” ― Soren Kierkegaard</p>
-        <p>“The most common form of despair is not being who you are.” Søren Kierkegaard</p>
-        <p>“What if everything in the world were a misunderstanding, what if laughter were really tears?”― Soren Kierkegaard</p>
-        <p>“If I were to wish for anything, I should not wish for wealth and power, but for the passionate sense of the potential, for the eye which, ever young and ardent, sees the possible. Pleasure disappoints, possibility never. And what wine is so sparkling, what so fragrant, what so intoxicating, as possibility!”- Soren Kierkegaard</p>
-        <p>Happiness is the meaning and the purpose of life, the whole aim and end of human existence.” ― Aristotle</p>
-      </div>
-      <div class="suggestions">
-        <h1>SUGGESTIONS</h1>
-        <br>
-        <p>take care of yourself :)</p>
-      </div>
-      <div class="thoughtstream">
-        <h1>THOUGHT STREAM</h1>
-        <br>
-        <p>i want to find a sign that tells me not to do something, and do it</p>
-        <br>
-        <p>flowers, five petals, etched into the tops of each paste pink plush velvet chairs, tufted and luxurious chairs populate the wall
-          gold accents  brighten the brilliant white tile bathroom. the knobs, faucet, lighting fixtures-Gold.</p>
+
+      <div class="top-container">
+        <div class="inspo">
+          <h1 style="font-size:3vw;">INSPIRATION</h1>
           <br>
-          <p>why does the sun disguise the stars when it itself is a star? is it jealous?</p>
+          <p>“Life is not a problem to be solved, but a reality to be experienced.” ― Soren Kierkegaard</p>
+          <p>“The most common form of despair is not being who you are.” Søren Kierkegaard</p>
+          <p>“What if everything in the world were a misunderstanding, what if laughter were really tears?”― Soren Kierkegaard</p>
+          <p>Happiness is the meaning and the purpose of life, the whole aim and end of human existence.” ― Aristotle</p>
+        </div>
+        <div class="suggestions">
+          <h1 style="font-size:3vw;">SUGGESTIONS</h1>
           <br>
-          <p>how terrible it is to be here under this cold, running water
-            Each droplet whispers a way inwards
-            I would drown if I wasn’t empty </p>
+          <p>take care of yourself :)</p>
+        </div>
+        <div class="thoughtstream">
+          <h1 style="font-size:3vw;">THOUGHT STREAM</h1>
+          <br>
+          <p>i want to find a sign that tells me not to do something, and do it</p>
+          <br>
+          <p>flowers, five petals, etched into the tops of each paste pink plush velvet chairs, tufted and luxurious chairs populate the wall
+            gold accents  brighten the brilliant white tile bathroom. the knobs, faucet, lighting fixtures-Gold.</p>
+            <br>
+            <p>why does the sun disguise the stars when it itself is a star? is it jealous?</p>
           </div>
         </div>
 
@@ -76,7 +73,7 @@
             <h2>of the day</h2>
           </div>
           <div class="jpg-img">
-            <img src="sunset.jpg" alt="Plaza.">
+            <img src="sunset.jpg" alt="Plaza." width="400px">
           </div>
         </div>
 
@@ -89,13 +86,13 @@
 
 
 
+      </div>
 
 
 
+      <div class="clr"></div
 
-        <div class="clr"></div
 
+      </body>
 
-        </body>
-
-        </html>
+      </html>
