--- a/fragments.html
+++ b/fragments.html
@@ -43,21 +43,21 @@
 
       <div class="row">
         <div class="column">
-          <img src="hi1.png" alt="hello1">
-          <img src="hi2.png" alt="hello2">
-          <img src="hi3.png" alt="hello3">
-          <img src="hi4.png" alt="hello4">
-          <img src="hi5.jpg" alt="hello5">
-          <img src="hi6.jpg" alt="hello6">
-          <img src="hi7.png" alt="hello7">
+          <img src="hi1.PNG" alt="hello1">
+          <img src="hi2.PNG" alt="hello2">
+          <img src="hi3.PNG" alt="hello3">
+          <img src="hi4.PNG" alt="hello4">
+          <img src="hi5.JPG" alt="hello5">
+          <img src="hi6.JPG" alt="hello6">
+          <img src="hi7.PNG" alt="hello7">
         </div>
         <div class="column">
-          <img src="hi8.png" alt="hello8">
-          <img src="hi9.png" alt="hello9">
-          <img src="hi10.png" alt="hello10">
-          <img src="hi11.png" alt="hello11">
-          <img src="hi12.png" alt="hello12">
-          <img src="hi13.jpg" alt="hello`3">
+          <img src="hi8.PNG" alt="hello8">
+          <img src="hi9.PNG" alt="hello9">
+          <img src="hi10.PNG" alt="hello10">
+          <img src="hi11.PNG" alt="hello11">
+          <img src="hi12.PNG" alt="hello12">
+          <img src="hi13.JPG" alt="hello`3">
         </div>
       </div>
 
