--- a/glisten.html
+++ b/glisten.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
 
   <title>4 A.M</title>
+
+  <script src="https://kit.fontawesome.com/894577bc57.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -41,6 +44,17 @@
         </div>
       </div>
 
+      <div class="dict-container">
+        <h1>WHAT IS THAT WORD?</h1>
+      </div>
+
+      <form class="search">
+        <input id="search-field" type="text" name="search" value="" placeholder=":)"></input>
+        <a href="#"><i id="search-button" class="fas fa-3x fa-search"></i></a>
+      </form>
+
+
+      <div id="definition"></div>
 
 
       <footer class="footer">
@@ -51,12 +65,9 @@
 
 
 
+<script src="script.js">
 
-
-
-
-
-
+</script>
 
 </body>
 
