--- a/fragments.html
+++ b/fragments.html
@@ -43,23 +43,25 @@
 
       <div class="row">
         <div class="column">
-          <img src="hi1.PNG" alt="hello1">
-          <img src="hi2.PNG" alt="hello2">
-          <img src="hi3.PNG" alt="hello3">
-          <img src="hi4.PNG" alt="hello4">
-          <img src="hi5.JPG" alt="hello5">
-          <img src="hi6.JPG" alt="hello6">
-          <img src="hi7.PNG" alt="hello7">
+          <img src="ph0t0s/hi1.PNG" alt="hello1">
+          <img src="ph0t0s/hi2.PNG" alt="hello2">
+          <img src="ph0t0s/hi3.PNG" alt="hello3">
+          <img src="ph0t0s/hi4.PNG" alt="hello4">
+          <img src="ph0t0s/hi5.JPG" alt="hello5">
+          <img src="ph0t0s/hi6.JPG" alt="hello6">
+          <img src="ph0t0s/hi7.PNG" alt="hello7">
         </div>
         <div class="column">
-          <img src="hi8.PNG" alt="hello8">
-          <img src="hi9.PNG" alt="hello9">
-          <img src="hi10.PNG" alt="hello10">
-          <img src="hi11.PNG" alt="hello11">
-          <img src="hi12.PNG" alt="hello12">
-          <img src="hi13.JPG" alt="hello`3">
+          <img src="ph0t0s/hi8.PNG" alt="hello8">
+          <img src="ph0t0s/hi9.PNG" alt="hello9">
+          <img src="ph0t0s/hi10.PNG" alt="hello10">
+          <img src="ph0t0s/hi11.PNG" alt="hello11">
+          <img src="ph0t0s/hi12.PNG" alt="hello12">
+          <img src="ph0t0s/hi13.JPG" alt="hello`3">
         </div>
       </div>
+
+      <!-- FIX THE STUPID DIRECTORIES -->
 
       </div>
 
