edits that make it shine a bit brighter

--- a/fragments.html
+++ b/fragments.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="fragments.html">Fragments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="glisten.html">Glisten</a>
+            <a class="nav-link" href="reveal.html">Glisten</a>
           </li>
         </nav>
           </div>
@@ -35,8 +35,8 @@
       <div class="content-container">
 
         <div class="title-header">
-          <h1>FRAGMENTS</h1>
-          <h2>life of images</h2>
+          <h1 style="font-size:14vw;">FRAGMENTS</h1>
+          <h2 style="font-size:7vw;">life of images</h2>
         </div>
       </div>
 
