--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="fragments.html">Fragments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="glisten.html">Glisten</a>
+            <a class="nav-link" href="reveal.html">Glisten</a>
           </li>
         </nav>
           </div>
@@ -35,9 +35,9 @@
       <div class="content-container">
 
         <div class="title-header">
-          <h1>4 A.M</h1>
-          <h2>EXPLORE CONTEMPLATIVE</h2>
-          <h3>escapades</h3>
+          <h1 style="font-size:14vw;">4 A.M</h1>
+          <h2 style="font-size:7vw;">EXPLORE CONTEMPLATIVE</h2>
+          <h3 style="font-size:7vw;">escapades</h3>
         </div>
       </div>
 
