--- a/reveal.html
+++ b/reveal.html
@@ -27,20 +27,17 @@
             <a class="nav-link" href="fragments.html">Fragments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="glisten.html">Glisten</a>
+            <a class="nav-link" href="reveal.html">Reveal</a>
           </li>
         </nav>
           </div>
 
-
-
-
       <div class="content-container">
 
         <div class="title-header">
-          <h1>GLISTEN</h1>
-          <h2>what you want others to see</h2>
-          <h3>that glimmer of hope, that sheen of assurance</h3>
+          <h1 style="font-size:14vw;">REVEAL</h1>
+          <h2 style="font-size:7vw;">what you want others to see</h2>
+          <h3 style="font-size:5vw;">that glimmer of hope, that sheen of assurance</h3>
         </div>
       </div>
 
@@ -49,13 +46,11 @@
       </div>
 
       <form class="search">
-        <input id="search-field" type="text" name="search" value="" placeholder=":)"></input>
-        <a href="#"><i id="search-button" class="fas fa-3x fa-search"></i></a>
+        <input id="search-field" type="text" name="search" value="" placeholder=":)">
+        <button class="fas fa-3x fa-search" type="submit" id="search-button"></button>
       </form>
 
-
       <div id="definition"></div>
-
 
       <footer class="footer">
         <small>Copyright &copy; 2020, Kallie</small>
@@ -64,10 +59,7 @@
       </footer>
 
 
-
-<script src="script.js">
-
-</script>
+<script src="script.js"></script>
 
 </body>
 
