--- a/sparks.html
+++ b/sparks.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="fragments.html">Fragments</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="glisten.html">Glisten</a>
+          <a class="nav-link" href="reveal.html">Glisten</a>
         </li>
       </nav>
     </div>
@@ -33,8 +33,8 @@
 
     <div class="content-container">
       <div class="title-header">
-        <h1>SPARKS</h1>
-        <h2><em>Ignite with thought.</em></h2>
+        <h1 style="font-size:14vw;">SPARKS</h1>
+        <h2 style="font-size:7vw;"><em>Ignite with thought.</em></h2>
       </div>
     </div>
 
@@ -73,7 +73,7 @@
             <h2>of the day</h2>
           </div>
           <div class="jpg-img">
-            <img src="sunset.jpg" alt="Plaza." width="400px">
+            <img src="ph0t0s/sunset.jpg" alt="Plaza." width="400px">
           </div>
         </div>
 
