--- a/fragments.html
+++ b/fragments.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='UTF-8' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 
   <title>4 A.M</title>
 </head>
@@ -24,7 +24,7 @@
             <a class="nav-link" href="fragments.html">Fragments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reveal.html">Glisten</a>
+            <a class="nav-link" href="reveal.html">Reveal</a>
           </li>
         </nav>
           </div>
@@ -43,25 +43,23 @@
 
       <div class="row">
         <div class="column">
-          <img src="ph0t0s/hi1.PNG" alt="hello1">
-          <img src="ph0t0s/hi2.PNG" alt="hello2">
-          <img src="ph0t0s/hi3.PNG" alt="hello3">
-          <img src="ph0t0s/hi4.PNG" alt="hello4">
-          <img src="ph0t0s/hi5.JPG" alt="hello5">
-          <img src="ph0t0s/hi6.JPG" alt="hello6">
-          <img src="ph0t0s/hi7.PNG" alt="hello7">
+          <img src="./hi1.PNG" alt="hello1">
+          <img src="./hi2.PNG" alt="hello2">
+          <img src="./hi3.PNG" alt="hello3">
+          <img src="./hi4.PNG" alt="hello4">
+          <img src="./hi5.JPG" alt="hello5">
+          <img src="./hi6.JPG" alt="hello6">
+          <img src="./hi7.PNG" alt="hello7">
         </div>
         <div class="column">
-          <img src="ph0t0s/hi8.PNG" alt="hello8">
-          <img src="ph0t0s/hi9.PNG" alt="hello9">
-          <img src="ph0t0s/hi10.PNG" alt="hello10">
-          <img src="ph0t0s/hi11.PNG" alt="hello11">
-          <img src="ph0t0s/hi12.PNG" alt="hello12">
-          <img src="ph0t0s/hi13.JPG" alt="hello`3">
+          <img src="./hi8.PNG" alt="hello8">
+          <img src="./hi9.PNG" alt="hello9">
+          <img src="./hi10.PNG" alt="hello10">
+          <img src="./hi11.PNG" alt="hello11">
+          <img src="./hi12.PNG" alt="hello12">
+          <img src="./hi13.JPG" alt="hello`3">
         </div>
       </div>
-
-      <!-- FIX THE STUPID DIRECTORIES -->
 
       </div>
 
