--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='UTF-8' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 
   <title>4 A.M</title>
 </head>
@@ -24,7 +24,7 @@
             <a class="nav-link" href="fragments.html">Fragments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reveal.html">Glisten</a>
+            <a class="nav-link" href="reveal.html">Reveal</a>
           </li>
         </nav>
           </div>
