--- a/sparks.html
+++ b/sparks.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset='UTF-8' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <title>4 A.M</title>
 </head>
@@ -25,7 +25,7 @@
           <a class="nav-link" href="fragments.html">Fragments</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reveal.html">Reveal</a>
+          <a class="nav-link" href="glisten.html">Glisten</a>
         </li>
       </nav>
     </div>
@@ -73,7 +73,7 @@
             <h2>of the day</h2>
           </div>
           <div class="jpg-img">
-            <img src="./sunset.jpg" alt="Plaza." width="400px">
+            <img src="ph0t0s/sunset.jpg" alt="Plaza." width="400px">
           </div>
         </div>
 
